Google SignIn is created

--- a/Edu.UI/Areas/EduAdmin/Views/Course/Create.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Course/Create.cshtml
@@ -23,13 +23,98 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <label asp-for="ImagePath" class="col-sm-3 col-form-label">Select Image </label>
+                <label asp-for="AboutCourse" class="col-sm-3 col-form-label"> </label>
                 <div class="col-sm-9">
-                    <input asp-for="ImagePath" class="form-control" id="horizontal-firstname-input" placeholder="Image">
-                    <span class="text-danger" asp-validation-for="ImagePath"></span>
+                    <input asp-for="AboutCourse" class="form-control" id="horizontal-firstname-input" placeholder="AboutCourse">
+                    <span class="text-danger" asp-validation-for="AboutCourse"></span>
+                </div>
+            </div> 
+            <div class="row mb-4">
+                <label asp-for="AboutCourseDescription" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="AboutCourseDescription" class="form-control" id="horizontal-firstname-input" placeholder="AboutCourseDescription">
+                    <span class="text-danger" asp-validation-for="AboutCourseDescription"></span>
+                </div>
+            </div>  
+            <div class="row mb-4">
+                <label asp-for="ToApply" class="col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input asp-for="ToApply" class="form-control" id="horizontal-firstname-input" placeholder="ToApply">
+                    <span class="text-danger" asp-validation-for="ToApply"></span>
+                </div>
+            </div> 
+            <div class="row mb-4">
+                <label asp-for="ToApplyDescription" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="ToApplyDescription" class="form-control" id="horizontal-firstname-input" placeholder="ToApplyDescription">
+                    <span class="text-danger" asp-validation-for="ToApplyDescription"></span>
+                </div>
+            </div> 
+            <div class="row mb-4">
+                <label asp-for="Certification" class="col-sm-3 col-form-label">  </label>
+                <div class="col-sm-9">
+                    <input asp-for="Certification" class="form-control" id="horizontal-firstname-input" placeholder="Certification">
+                    <span class="text-danger" asp-validation-for="Certification"></span>
+                </div>
+            </div> 
+            <div class="row mb-4">
+                <label asp-for="Starts" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="Starts" class="form-control" id="horizontal-firstname-input" placeholder="Starts">
+                    <span class="text-danger" asp-validation-for="Starts"></span>
                 </div>
             </div>
-
+            <div class="row mb-4">
+                <label asp-for="Month" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="Month" class="form-control" id="horizontal-firstname-input" placeholder="Month">
+                    <span class="text-danger" asp-validation-for="Month"></span>
+                </div>
+            </div>
+              <div class="row mb-4">
+                <label asp-for="Hours" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="Hours" class="form-control" id="horizontal-firstname-input" placeholder="Hours">
+                    <span class="text-danger" asp-validation-for="Hours"></span>
+                </div>
+            </div>
+              <div class="row mb-4">
+                <label asp-for="Level" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="Level" class="form-control" id="horizontal-firstname-input" placeholder="Level">
+                    <span class="text-danger" asp-validation-for="Level"></span>
+                </div>
+            </div>
+              <div class="row mb-4">
+                <label asp-for="Language" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="Language" class="form-control" id="horizontal-firstname-input" placeholder="Language">
+                    <span class="text-danger" asp-validation-for="Language"></span>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <label asp-for="Students" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="Students" class="form-control" id="horizontal-firstname-input" placeholder="Students">
+                    <span class="text-danger" asp-validation-for="Students"></span>
+                </div>
+            </div>
+             <div class="row mb-4">
+                <label asp-for="Assesments" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="Assesments" class="form-control" id="horizontal-firstname-input" placeholder="Assesments">
+                    <span class="text-danger" asp-validation-for="Assesments"></span>
+                </div>
+            </div>
+             <div class="row mb-4">
+                <label asp-for="CourseFee" class="col-sm-3 col-form-label"> </label>
+                <div class="col-sm-9">
+                    <input asp-for="CourseFee" class="form-control" id="horizontal-firstname-input" placeholder="CourseFee">
+                    <span class="text-danger" asp-validation-for="CourseFee"></span>
+                </div>
+            </div>
+            
+            
 
             <div class="row justify-content-end">
                 <div class="col-sm-9">
