--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -91,33 +91,35 @@
 										</li>
 										<li>
 											<a asp-area="EduAdmin" asp-controller="Auth" asp-action="Login">Login</a>
-											<ul>
-												<li><a href="@ViewBag.response">Login with Google</a></li>
-												
-											</ul>
+												<ul>
+													<li><a href="@ViewBag.response">Login with Google</a></li>
+												</ul>
+											@if (!string.IsNullOrEmpty(ViewBag.GmailName))
+											{
+											<li>
+												<p>Hi, @ViewBag.GmailName! You are signed in with Google.</p>
+											</li>
+											}
+										</li>
 										</li>
 
 										<li>
-											
 											@if (User.Identity.IsAuthenticated)
 											{
-												<a >@User.Identity.Name</a>
-										<ul>
-												<li><a asp-area="EduAdmin" asp-controller="Auth" asp-action="Logout">Logout</a></li>
-										</ul>
+												<a>@User.Identity.Name</a>
+												<ul>
+													<li><a asp-area="EduAdmin" asp-controller="Auth" asp-action="Logout">Logout</a></li>
+												</ul>
 											}
 											else
 											{
-											
-										<ul>
-
-												<li><a asp-area="EduAdmin" asp-controller="Auth" asp-action="Login">LogIn</a></li>
-
-										</ul>
+												<ul>
+													<li><a asp-area="EduAdmin" asp-controller="Auth" asp-action="Login">LogIn</a></li>
+												</ul>
 											}
 											
-										</li>
-											<li><a href="~/assets/contact.html">Contact</a></li>
+
+									
 										
 									</ul>
 								</nav>
