--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -47,14 +47,8 @@
 								<nav>
 									<ul>
 										<li>
-											<a href="~/assets/index.html">Home</a>
-											<ul>
-												<li><a href="~/assets/index.html">Home One</a></li>
-												<li><a href="~/assets/index-2.html">Home Two</a></li>
-												<li><a href="~/assets/index-3.html">Home Three</a></li>
-												<li><a href="~/assets/index-4.html">Home Four</a></li>
-												<li><a href="~/assets/index-5.html">Home Five</a></li>
-											</ul>
+											<a asp-controller="Home" asp-action="Index">Home</a>
+									
 										</li>
 										<li><a href="~/assets/about.html">About</a></li>
 										<li>
@@ -68,8 +62,6 @@
 											<a href="~/assets/event.html">event</a>
 											<ul>
 												<li><a asp-controller="Event" asp-action="Index">event</a></li>
-												<li><a href="~/assets/event-left-side-bar.html">event left sidebar</a></li>
-												<li><a href="~/assets/event-right-side-bar.html">event right sidebar</a></li>
 												<li><a asp-controller="EventDetaile" asp-action="Index">event details</a></li>
 											</ul>
 										</li>
@@ -81,12 +73,10 @@
 											</ul>
 										</li>
 										<li>
-												<a href="~/assets/blog.html">blog</a>
+												<a asp-controller="Blog" asp-action="Index">blog</a>
 												<ul>
-												<li><a href="~/assets/blog.html">blog</a></li>
-												<li><a href="~/assets/blog-left-side-bar.html">blog left sidebar</a></li>
-												<li><a href="~/assets/blog-right-side-bar.html">blog righ sidebar</a></li>
-												<li><a href="~/assets/blog-details.html">blog details</a></li>
+												<li><a asp-controller="Blog" asp-action="Index">blog</a></li>
+												<li><a asp-controller="BlogDetaile" asp-action="Index">blog details</a></li>
 											</ul>
 										</li>
 										<li>
