--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 											<a asp-controller="Home" asp-action="Index">Home</a>
 									
 										</li>
-										<li><a href="~/assets/about.html">About</a></li>
+										<li><a asp-controller="About" asp-action="Index">About</a></li>
 										<li>
 											<a asp-controller="Course" asp-action="Index">courses</a>
 											<ul>
