--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -59,25 +59,16 @@
 											</ul>
 										</li>
 										<li>
-											<a href="~/assets/event.html">event</a>
-											<ul>
-												<li><a asp-controller="Event" asp-action="Index">event</a></li>
-												<li><a asp-controller="EventDetaile" asp-action="Index">event details</a></li>
-											</ul>
+											<a asp-controller="Event" asp-action="Index">event</a>
+											
 										</li>
 										<li class="hidden-sm">
 											<a asp-controller="Teacher" asp-action="Index">teacher</a>
-											<ul>
-												<li><a asp-controller="Teacher" asp-action="Index">teacher</a></li>
-												<li><a href="~/assets/teacher-details.html">teacher details</a></li>
-											</ul>
+											
 										</li>
 										<li>
 												<a asp-controller="Blog" asp-action="Index">blog</a>
-												<ul>
-												<li><a asp-controller="Blog" asp-action="Index">blog</a></li>
-												<li><a asp-controller="BlogDetaile" asp-action="Index">blog details</a></li>
-											</ul>
+											
 										</li>
 										<li>
 											<a asp-area="EduAdmin" asp-controller="Auth" asp-action="Login">Login</a>
